
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int num ;
typedef int FILE ;


 int fputc (int,int *) ;

void fwi32(FILE *fd, int num) {
    fputc((num ) & 0xff, fd);
    fputc((num >> 8) & 0xff, fd);
    fputc((num >> 16) & 0xff, fd);
    fputc((num >> 24) & 0xff, fd);
}
